--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "gulp-webp-html": "^1.0.2",
     "gulp-webpcss": "^1.1.1"
   },
+  "scripts": {
+    "deploy": "gulp build && gh-pages -d build"
+  },
   "dependencies": {
     "gulp-file-include": "^2.3.0",
     "webp-converter": "2.2.3"
