--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Сборка gulp",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d Rest"
   },
   "author": "Alexandr",
   "license": "ISC",
@@ -29,10 +29,9 @@
     "gulp-webp-html": "^1.0.2",
     "gulp-webpcss": "^1.1.1"
   },
-  "scripts": {
-    "deploy": "gulp build && gh-pages -d build"
-  },
+  "homepage": "https://alexandr-katane.github.io/responsive-rest",
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "gulp-file-include": "^2.3.0",
     "webp-converter": "2.2.3"
   }
